compiler/testData/diagnostics/tests/secondaryConstructors/resolvePropertyInitializerWithoutPrimary.fir.kt
class A {
    konst prop: Int = <!INITIALIZER_TYPE_MISMATCH!>""<!>
    constructor()
}
